--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Favicon (multiple sizes) -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/image.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -20,13 +20,13 @@
     <meta property="og:title" content="Kariuki Nicholas Gathogo | Full Stack Developer">
     <meta property="og:description" content="Portfolio of Kariuki Nicholas Gathogo - Full Stack Developer specializing in modern web technologies.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourportfolio.com">
-    <meta property="og:image" content="https://yourportfolio.com/images/og-image.jpg">
+    <meta property="og:url" content="https://kariuki-nicholas.netlify.app/">
+    <meta property="og:image" content="https://kariuki-nicholas.netlify.app/src/assets/injustify_HIM.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@yourtwitterhandle">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourportfolio.com" />
+    <link rel="canonical" href="https://kariuki-nicholas.netlify.app/" />
     
     <!-- Preconnect to CDNs -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
@@ -44,13 +44,13 @@
       "@type": "Person",
       "name": "Kariuki Nicholas Gathogo",
       "jobTitle": "Full Stack Developer",
-      "url": "https://yourportfolio.com",
+      "url": "https://kariuki-nicholas.netlify.app/",
       "sameAs": [
-        "https://github.com/yourusername",
-        "https://linkedin.com/in/yourprofile",
-        "https://twitter.com/yourhandle"
+        "https://github.com/NicholasTechmoverai",
+        "https://linkedin.com/in/",
+        "https://www.instagram.com/kariuki_g_nicholas/"
       ],
-      "knowsAbout": ["Vue.js", "React", "Node.js", "JavaScript", "Web Development"]
+      "knowsAbout": ["Vue.js","Nuxt.js","python","React", "Node.js", "JavaScript", "Web Development","Fullstack Development"]
     }
     </script>
   </head>
