--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     
     <!-- SEO Meta Tags -->
+     <meta name="google-site-verification" content="lbRjugq4cVWWlx5ElCnJ-MVE7xVfAPxMNMalsvP7g4E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Kariuki Nicholas Gathogo - Full Stack Developer specializing in Vue.js, React, and Node.js. Portfolio showcasing projects, skills, and contact information.">
     <meta name="keywords" content="Full Stack Developer, Web Developer, Vue.js, React, Node.js, Portfolio, Kenya Developer">
