--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Portfolio of Kariuki Nicholas Gathogo - Full Stack Developer specializing in modern web technologies.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kariuki-nicholas.netlify.app/">
-    <meta property="og:image" content="https://kariuki-nicholas.netlify.app/src/assets/injustify_HIM.jpg">
+    <meta property="og:image" content="https://kariuki-nicholas.netlify.app/injustify_HIM.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@yourtwitterhandle">
     
