--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
   <meta name="google-site-verification" content="lbRjugq4cVWWlx5ElCnJ-MVE7xVfAPxMNMalsvP7g4E" />
   <meta name="msvalidate.01" content="5B9F1869FBA29355D11F87DD1D3A8FD9" />
-  
+  <meta name="google-site-verification" content="ezFz2GgKlvgLUPeQ5r2AVZ6VDeCQvmFN-n4X8eK4uuY" />
+
   <title>Kariuki Nicholas Gathogo | Full Stack Developer | @gathogo</title>
 
   <script type="application/ld+json">
