--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Kariuki Nicholas Gathogo - Full Stack Developer specializing in Vue.js, React, and Node.js. Portfolio showcasing projects, skills, and contact information.">
+    content="Kariuki Nicholas Gathogo - Full Stack Developer specializing in Vue.js, python,machine learning, and Node.js. Portfolio showcasing projects, skills, and contact information.">
   <meta name="keywords"
     content="Full Stack Developer, Web Developer, Vue.js, React, Node.js, Portfolio, Kenya Developer">
   <meta name="author" content="Kariuki Nicholas Gathogo">
